Fix text alignment

--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ ol.demonstrative li::before {
 }
 
 .middle {
-    text-align: middle;
+    text-align: center;
 }
 
 .end {
